--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^19.3.0",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-firebase/firestore": "^19.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "invariant": "^2.2.4",
